[gd_scene load_steps=12 format=3 uid="uid://6nlopxufl6ie"]

[ext_resource type="Script" uid="uid://dpdxiuiesm7qs" path="res://Entities/NPC/npc.gd" id="1_toiml"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_toiml"]

[sub_resource type="SphereMesh" id="SphereMesh_jn5u5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d2w3i"]
albedo_color = Color(0.275728, 0.405751, 0.273733, 1)

[sub_resource type="BoxMesh" id="BoxMesh_c5jhn"]
size = Vector3(1, 0.05, 0.58)

[sub_resource type="CylinderMesh" id="CylinderMesh_1qdmo"]
height = 0.05

[sub_resource type="Animation" id="Animation_ww0jn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/Mesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_e5kic"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Mesh:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.056, 0.95, 1.056), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/Mesh:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.95, 0), Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vweq0"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Mesh:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.9, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/Mesh:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.9, 0), Vector3(0, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vweq0"]
_data = {
&"RESET": SubResource("Animation_ww0jn"),
&"idle": SubResource("Animation_e5kic"),
&"walk": SubResource("Animation_vweq0")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e3e2u"]

[node name="NPC" type="Node3D"]
script = ExtResource("1_toiml")

[node name="Visual" type="Node3D" parent="."]

[node name="Mesh" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_toiml")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual/Mesh"]
transform = Transform3D(0.995072, 0, 0, 0, 1.00466, 0, 0, 0, 0.995072, 0, 0.639493, 0)
mesh = SubResource("SphereMesh_jn5u5")
surface_material_override/0 = SubResource("StandardMaterial3D_d2w3i")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visual/Mesh"]
transform = Transform3D(0.96962, 0, 0, 0, 1.02855, 0, 0, 0, 0.96962, 0, 0.635279, -0.175601)
mesh = SubResource("BoxMesh_c5jhn")
surface_material_override/0 = SubResource("StandardMaterial3D_d2w3i")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Visual/Mesh"]
transform = Transform3D(0.969773, 0, 0, 0, 1.02747, 0, 0, 0, 0.969773, 0, 0.635023, -0.453113)
mesh = SubResource("CylinderMesh_1qdmo")
surface_material_override/0 = SubResource("StandardMaterial3D_d2w3i")

[node name="HandItem" type="Node3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vweq0")
}
autoplay = "walk"

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
height = 2.0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_e3e2u")

[node name="SyncTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="waypoint_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_waypoint_reached"]
[connection signal="timeout" from="SyncTimer" to="." method="_on_sync_timer_timeout"]
